--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "jd-sport-ecommerce",
   "version": "1.0.0",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
